@@ -1,35 +1,46 @@
-# Fix: IllegalAccessError and Project Cleanup
+# Walkthrough - Web UI Parity for Android
 
-The `java.lang.IllegalAccessError` during build was caused by the Kotlin Annotation Processing Tool (kapt) attempting to access internal Java compiler classes (`com.sun.tools.javac`) which are encapsulated in newer JDKs.
+I have successfully ported the features and aesthetics of the Web Dashboard to the Android native application. This overhaul transforms the app from a basic list-view into a high-fidelity financial analytics tool.
 
-I have resolved this by migrating the project to **Kotlin Symbol Processing (KSP)** and updating the build configuration.
+## Major UI Enhancements
 
-## Key Changes
+### 1. Advanced Dashboard (V2)
+- **Hero Card**: A high-impact section showing "Net this month" with a dynamic Income vs. Spent progress bar.
+- **Sparkline Charts**: Native Canvas-based area charts showing daily spending trends, matching the web's analytical look.
+- **Stat Tiles**: Quick-glance cards for Today's Spend and Today's Income.
 
-### 1. Build Configuration Update
-- **Kotlin Migration**: Updated Kotlin from `1.9.10` to `1.9.20` and Compose Compiler extension to `1.5.4`.
-- **KSP Integration**: Replaced `kapt` with `ksp` for **Room** and **Hilt** to avoid internal Java compiler dependency.
-- **JVM Arguments**: Updated [gradle.properties](file:///D:/Projects/expense-tracker/android-app/gradle.properties) with `--add-opens` flags to ensure the compiler has necessary permissions on modern JDKs.
+### 2. Budgets & Progress Tracking
+- **Native Budgeting**: A new dedicated screen to manage category-based spending limits.
+- **Real-time Progress**: Visual indicators (Progress Bars) that turn **Flame Red** when you exceed your budget.
 
-### 2. Room & Data Layer Fixes
-- **SQL Fix**: Corrected a join query in [Daos.kt](file:///D:/Projects/expense-tracker/android-app/app/src/main/java/com/expensetracker/app/data/local/daos/Daos.kt) that was using an incorrect table name (`category` vs `categories`).
-- **Missing Imports**: Added missing imports for `Context`, `BudgetPeriod`, and other models in [AppDatabase.kt](file:///D:/Projects/expense-tracker/android-app/app/src/main/java/com/expensetracker/app/data/local/AppDatabase.kt) and [Converters.kt](file:///D:/Projects/expense-tracker/android-app/app/src/main/java/com/expensetracker/app/data/db/converters/Converters.kt).
+### 3. Analytics & Insights
+- **Spending Trends**: A tabbed analytics view showing a large-scale Area Chart of your spending history.
+- **Deep Dives**: Structural foundation for Category and Merchant breakdown analysis.
 
-### 3. Worker & Repository Fixes
-- **Hilt Workers**: Migrated `SyncWorker` and `SaveParsedMessageWorker` to use `@HiltWorker` for proper dependency injection.
-- **Mapping**: Added missing mapping logic to [Extensions.kt](file:///D:/Projects/expense-tracker/android-app/app/src/main/java/com/expensetracker/app/data/model/Extensions.kt) to support converting domain models to Room entities.
-- **Hilt Binding**: Added `@ApplicationContext` to `ApiRepository` to fix a dependency injection error.
+---
 
-### 4. UI & ViewModel Cleanup
-- **Syntax Correction**: Fixed an invalid `private var set` declaration in [DashboardViewModel.kt](file:///D:/Projects/expense-tracker/android-app/app/src/main/java/com/expensetracker/app/ui/screens/dashboard/DashboardViewModel.kt) and [LoginViewModel.kt](file:///D:/Projects/expense-tracker/android-app/app/src/main/java/com/expensetracker/app/ui/screens/login/LoginViewModel.kt).
-- **Import Cleanup**: Removed duplicate and conflicting imports in [MainActivity.kt](file:///D:/Projects/expense-tracker/android-app/app/src/main/java/com/expensetracker/app/ui/MainActivity.kt) and added missing Compose annotations.
+## Technical Improvements
+
+### 1. Data Layer & CRUD
+- **Full API Parity**: Integrated all missing backend endpoints for Budgets, Transactions, and Data Seeding.
+- **CRUD Operations**: Added the ability to manually Add, Update, and Delete records directly from the mobile UI.
+
+### 2. Native UI Restoration
+- **Reverted WebView**: Replaced the previous WebView implementation with a 100% native Jetpack Compose UI.
+- **Hilt Integration**: Restored full Dependency Injection support for all new view models.
+
+### 3. High-Fidelity Design System
+- **Modern Dark Theme**: Ported the Tailwind-inspired "Slate & Mint" color palette to Compose.
+- **Icon Parity**: Integrated the same emoji-based category system used on the web.
+
+---
 
 ## Verification Results
 
-### Build Status
-> [!NOTE]
-> The project now builds successfully using `./gradlew assembleDebug`.
+### Build & Run
+- Successfully built the application using `./gradlew assembleDebug`.
+- Verified the "admin@test.com" quick-access login.
+- Confirmed that "Net this month" data matches the web backend calculations.
 
-### Tests Run
-- Verified KSP code generation for Room and Hilt.
-- Verified that all compilation errors across 10+ files were resolved.
+> [!TIP]
+> Use the **Register Now** link on the login screen to create a new cloud-synced account instantly!
